# erc6492

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  devloop.sh
.github/workflows/: ci.yaml
bytecode/Erc1271Mock.sol/: Erc1271Mock.bytecode
bytecode/Erc6492.sol/: ValidateSigOffchain.bytecode
contracts/: Erc1271Mock.sol
src/: create.rs  lib.rs  test_helpers.rs
