[package]
name = "erc6492"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
alloy = { version = "0.7.3", features = ["contract", "rpc-types"] }

[dev-dependencies]
alloy = { version = "0.7.3", features = ["signer-local"] }
alloy-node-bindings = { git = "https://github.com/alloy-rs/alloy.git", tag = "v0.7.3" }
regex = "1"
tokio = { version = "1", features = ["full"] }
