[package]
name = "erc6492"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
alloy = { version = "0.11.0", default-features = false }

[dependencies]
alloy = { workspace = true, features = [
    "sol-types",
    "providers",
    "rpc-types",
] }

[dev-dependencies]
alloy = { workspace = true, features = ["signer-local", "node-bindings"] }
regex = { version = "1", default-features = false }
tokio = { version = "1", default-features = false, features = [
    "process",
    "rt-multi-thread",
] }
